<resources>
    <string name="app_name">Flipper</string>
    <string name="desc">Recent research has provided a wealth of insight about how dogs came to be domesticated by humans and the roles they played in Native American culture. DNA studies on archaeological finds suggest that dogs may have been domesticated by humans as long as 40,000 years ago. When the first humans came to North America from Eurasia, at least 12,000 years ago, domesticated dogs came with them. They appear to have been highly prized by early North American hunter-gatherers and were their only animal companions for centuries, since there were no horses on the continent until the 16th century.</string>
    <string name="sony_xm4">Sony WH-10000XM4 Industry Leading Wireless Noise Cancelling Headpone</string>
    <string name="sony_xm4_price">$355.21</string>
    <string name="in_stock">In stock</string>

    <!-- Select bank/account screen -->
    <string name="label_loan_title">where should we send the money?</string>
    <string name="label_loan_note">amount will be credited to this bank account. EMI will also be debited from this bank account</string>
    <string name="paytm_bank">Paytm Payments Bank</string>
    <string name="paytm_num">91935670475</string>
    <string name="label_change_acnt">Change account</string>
    <string name="label_start_kyc">Tap for 1-click KYC</string>

    <!-- Repayment screen -->
    <string name="label_repayment_title">how do you wish to repay?</string>
    <string name="label_repayment_note">choose one of our recommended plans or make your own</string>
    <string name="create_own_plan">Create your own plan</string>
    <string name="see_calculations">See calculations</string>
    <string name="label_select_bank">Select your bank account</string>
    <string name="label_emi">EMI</string>
    <string name="label_duration">duration</string>

    <!--Loan Amount Selection screen-->
    <string name="label_amount_needed">nikunj, how much do you need?</string>
    <string name="label_amount_needed_note">move the dial and set any amount you need upto $458521</string>
    <string name="label_amount_needed_note_2">stas is instant money will be credited within seconds.</string>
    <string name="label_to_emi_selection">Proceed to EMI selection</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>