<?xml version="1.0" encoding="utf-8"?>
<com.selvakumarsm.elasticmodule2.ElasticView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black3"
    app:collapsedSceneId="@+id/collapse"
    app:expandedSceneId="@+id/expand"
    app:initialState="expanded"
    app:layoutDescription="@xml/layout_select_repayment_scene">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="20dp" />

    <TextView
        android:id="@+id/labelQuestion"
        style="@style/PrimaryTextTheme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/label_repayment_title" />

    <TextView
        android:id="@+id/labelNote"
        style="@style/PrimarySubTextTheme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/label_repayment_note"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvRepaymentOptions"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnSelectBank"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/top_rounded_button"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/label_select_bank"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryButtonText"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/btnCreateOwnPlan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button"
        android:padding="15dp"
        android:text="@string/create_own_plan"
        android:textAllCaps="false"
        android:textSize="17sp" />


    <TextView
        android:id="@+id/labelEMI"
        style="@style/CollapsedSubTextTheme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/label_emi"/>

    <TextView
        android:id="@+id/tvEMIAmount"
        style="@style/CollapsedTextTheme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="$ 4,247 /mo" />

    <TextView
        android:id="@+id/labelDuration"
        style="@style/CollapsedSubTextTheme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/label_duration" />

    <TextView
        android:id="@+id/tvEMIDuration"
        style="@style/CollapsedTextTheme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="12 months"
        />

    <ImageView
        android:id="@+id/ivExpand"
        android:layout_width="12dp"
        android:layout_height="12dp"
        app:srcCompat="@drawable/ic_action_expand" />

</com.selvakumarsm.elasticmodule2.ElasticView>