<?xml version="1.0" encoding="utf-8"?>

<com.selvakumarsm.elasticmodule2.ElasticView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    app:layoutDescription="@xml/layout_order_item_scene"
    app:collapsedSceneId="@+id/collapsed"
    app:expandedSceneId="@+id/expanded">

    <TextView
        android:id="@+id/tvProductPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_dark"
        android:text="@string/sony_xm4_price" />

    <ImageView
        android:id="@+id/tvProductImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:elevation="3dp"
        android:src="@drawable/sony" />

    <TextView
        android:id="@+id/tvProductName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:elevation="2dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="16sp"
        android:text="@string/sony_xm4" />

    <TextView
        android:id="@+id/tvInStackLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        android:text="@string/in_stock"
        android:textColor="@android:color/holo_green_dark" />


</com.selvakumarsm.elasticmodule2.ElasticView>