<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/layout_select_account_scene">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="20dp" />

    <TextView
        android:id="@+id/labelQuestion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="@string/label_loan_title"
        android:textColor="@color/colorPrimaryText"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toTopOf="@+id/guideline_top" />

    <TextView
        android:id="@+id/labelNote"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/label_loan_note"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/labelQuestion" />

    <Button
        android:id="@+id/btnChangeAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/rounded_button"
        android:padding="15dp"
        android:text="@string/label_change_acnt"
        android:textAllCaps="false"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/ivBankLogo" />

    <ImageView
        android:id="@+id/ivBankLogo"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:fontFamily="sans-serif-medium"
        android:src="@drawable/paytm"
        app:layout_constraintBottom_toBottomOf="@+id/tvMobNum"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toTopOf="@+id/tvBank" />

    <TextView
        android:id="@+id/tvBank"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="25dp"
        android:fontFamily="serif"
        android:text="@string/paytm_bank"
        android:textColor="@color/colorPrimaryText"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintStart_toEndOf="@+id/ivBankLogo"
        app:layout_constraintTop_toBottomOf="@+id/labelNote" />

    <TextView
        android:id="@+id/tvMobNum"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/paytm_num"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/tvBank"
        app:layout_constraintStart_toStartOf="@+id/tvBank"
        app:layout_constraintTop_toBottomOf="@+id/tvBank" />

    <Button
        android:id="@+id/btnStartKYC"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/top_rounded_button"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/label_start_kyc"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryButtonText"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.motion.widget.MotionLayout>