<?xml version="1.0" encoding="utf-8"?>
<com.selvakumarsm.elasticmodule2.ElasticView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black2"
    app:expandedSceneId="@+id/expanded"
    app:collapsedSceneId="@+id/collapsed"
    app:initialState="expanded"
    app:layoutDescription="@xml/layout_loan_amount_selection_scene">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="20dp" />

    <TextView
        android:id="@+id/labelQuestion"
        style="@style/PrimaryTextTheme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/label_amount_needed" />

    <TextView
        android:id="@+id/labelNote"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/label_amount_needed_note"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/ivAmountSelectionDialer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitCenter"
        android:src="@mipmap/amount_selection_dialer" />

    <TextView
        android:id="@+id/labelCreditAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/label_emi"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/creditAmount"
        style="@style/CollapsedPrimaryTextTheme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="$ 4,247 /mo" />

    <ImageView
        android:id="@+id/ivExpand"
        android:layout_width="12dp"
        android:layout_height="12dp"
        app:srcCompat="@drawable/ic_action_expand" />

    <Button
        android:id="@+id/btnProceedToEmi"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/top_rounded_button"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/label_to_emi_selection"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryButtonText"
        android:textSize="20sp" />
</com.selvakumarsm.elasticmodule2.ElasticView>